yamls/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-demo10
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-demo10
    spec:
      containers:
      - name: demo10
        image: "draft:dev"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 400m
              memory: 512Mi
            
      terminationGracePeriodSeconds: 10
